--- a/modules/ROOT/pages/deprecations-additions-removals-compatibility.adoc
+++ b/modules/ROOT/pages/deprecations-additions-removals-compatibility.adoc
@@ -16,6 +16,29 @@ New features are added to the language continuously, and occasionally, some feat
 This section lists all of the features that have been removed, deprecated, added, or extended in different Cypher versions.
 Replacement syntax for deprecated and removed features are also indicated.
 
+[[cypher-deprecations-additions-removals-5.26]]
+== Neo4j 5.26
+
+[cols="2", options="header"]
+|===
+| Feature
+| Details
+
+a|
+label:functionality[]
+label:updated[]
+[source, cypher, role="noheader"]
+----
+CREATE DATABASE foo TOPOLOGY $p PRIMARIES $s SECONDARIES
+----
+[source, cypher, role="noheader"]
+----
+ALTER DATABASE foo SET TOPOLOGY $p PRIMARIES $s SECONDARIES
+
+----
+| The `CREATE DATABASE` and `ALTER DATABASE` commands now accept parameters for `TOPOLOGY` configuration.
+|===
+
 [[cypher-deprecations-additions-removals-5.25]]
 == Neo4j 5.25
 
