Small fix to MATCH (#1085)

--- a/modules/ROOT/pages/clauses/match.adoc
+++ b/modules/ROOT/pages/clauses/match.adoc
@@ -158,14 +158,13 @@ RETURN n AS connectedNodes
 |===
 | connectedNodes
 | (:Movie {title: "Wall Street"})
-
 1+d| Rows: 1
 |===
 
 [[directed-relationship-patterns]]
 === Directed relationship patterns
 
-The direction of a relationship in a pattern is indicated by arrows: `-->` or `<--`.
+The direction of a relationship in a pattern is indicated by arrows: `+-->+` or `+<--+`.
 
 .Find all nodes connected to `Oliver Stone` by an outgoing relationship.
 [source, cypher]
