Remove mentions of Neo4j 6.0 (#1086)

--- a/modules/ROOT/pages/functions/scalar.adoc
+++ b/modules/ROOT/pages/functions/scalar.adoc
@@ -1205,12 +1205,12 @@ Future releases of Cypher may include updates to the current type system.
 This can include the introduction of new types and subtypes of already supported types.
 If a new type is introduced, it will be returned by the `valueType()` function as soon as it is released.
 However, if a more precise subtype of a previously supported type is introduced, it would be considered a breaking change.
-As a result, any new subtypes introduced after the release of Neo4j 5.13 will not be returned by the `valueType()` function until the following major release (Neo4j 6.0).
+As a result, any new subtypes introduced after the release of Neo4j 5.13 will not be returned by the `valueType()` function until the next major release of Neo4j.
 
-For example, the function currently returns `"FLOAT"`, but if a more specific `FLOAT` type was added, e.g. `FLOAT32`, this would be considered more specific and not be returned until Neo4j 6.0.
-As a result,`"FLOAT"` would continue to be returned for any `FLOAT32` values until the release of Neo4j 6.0.
+For example, the function currently returns `"FLOAT"`, but if a more specific `FLOAT` type was added, e.g. `FLOAT32`, this would be considered more specific and not be returned until the next major release of Neo4j.
+As a result,`"FLOAT"` would continue to be returned for any `FLOAT32` values until the next major release.
 
-With this in mind, the below list contains all supported types (as of Neo4j 5.13) displayed by the `valueType()` function until the release of Neo4j 6.0:
+With this in mind, the below list contains all supported types (as of Neo4j 5.13) displayed by the `valueType()` function until the next major release of Neo4j:
 
 *  Predefined types
 ** `NOTHING`
