--- a/modules/ROOT/pages/syntax/naming.adoc
+++ b/modules/ROOT/pages/syntax/naming.adoc
@@ -51,7 +51,8 @@ Some techniques to mitigate this are:
 
 [NOTE]
 ====
-Several special characters have been deprecated and will require escaping in Neo4j 6.0, see xref::deprecations-additions-removals-compatibility.adoc#cypher-deprecations-additions-removals-5.15[here] for the comprehensive list of deprecated characters.
+Several special characters have been deprecated and will require escaping in the next major release of Neo4j.
+For the comprehensive list of deprecated characters, see the  xref::deprecations-additions-removals-compatibility.adoc#cypher-deprecations-additions-removals-5.15[deprecations page].
 ====
 
 == Scoping and namespace rules
