Fix cos() table (#1087)

--- a/modules/ROOT/pages/functions/mathematical-trigonometric.adoc
+++ b/modules/ROOT/pages/functions/mathematical-trigonometric.adoc
@@ -186,8 +186,8 @@ The arctangent2 of `0.5` and `0.6` is returned.
 
 .Details
 |===
-| *Syntax* 3+| `acos(input)`
-| *Description* 3+| Returns the arccosine of a `FLOAT` in radians.
+| *Syntax* 3+| `cos(input)`
+| *Description* 3+| Returns the cosine of a `FLOAT` in radians.
 .2+| *Arguments* | *Name* | *Type* | *Description*
 | `input` | `FLOAT` | An angle in radians.
 | *Returns* 3+| `FLOAT`
